--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ flask-cors==4.0.0
 requests==2.31.0
 beautifulsoup4==4.12.2
 lxml==4.9.3
-googletrans==4.0.0rc1
-python-dotenv==1.0.0
+deepl==1.16.1
 schedule==1.2.0
