--- a/.github/workflows/azure-backend-deploy.yml
+++ b/.github/workflows/azure-backend-deploy.yml
@@ -35,11 +35,15 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'tejomag-backend'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1234567890ABCDEF12345 }}
-        package: './backend'
+    - name: Deploy to Azure Web App using CLI
+      run: |
+        # Create a zip file of the backend
+        cd backend
+        zip -r ../backend-deploy.zip . -x "*.pyc" "__pycache__/*" "*.db"
+        cd ..
+        
+        # Deploy using Azure CLI
+        az webapp deployment source config-zip \
+          --resource-group tejomag-rg \
+          --name tejomag-backend \
+          --src backend-deploy.zip
