--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -34,12 +34,23 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
       
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
+      - name: Login to Azure
+        uses: azure/login@v1
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: backend
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
+      - name: Deploy to Azure Web App using CLI
+        run: |
+          # Create a zip file of the backend
+          cd backend
+          zip -r ../backend-deploy.zip . -x "*.pyc" "__pycache__/*" "*.db"
+          cd ..
+          
+          # Deploy using Azure CLI
+          az webapp deployment source config-zip \
+            --resource-group tejomag-rg \
+            --name ${{ env.AZURE_WEBAPP_NAME }} \
+            --src backend-deploy.zip
   
   deploy-frontend:
     runs-on: ubuntu-latest
