--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -67,16 +67,6 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
       
-      - name: Install dependencies
-        working-directory: frontend
-        run: npm ci
-      
-      - name: Build application
-        working-directory: frontend
-        run: npm run build
-        env:
-          REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
-      
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
@@ -85,5 +75,8 @@ jobs:
           action: "upload"
           app_location: "frontend"
           output_location: "build"
-          skip_app_build: true
+          skip_app_build: false
+          app_build_command: "npm run build"
+          env:
+            REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
 
